<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="new_tab_menu_button" type="id"/>
    <item name="new_incognito_tab_menu_button" type="id"/>
    <item name="add_to_favourites_menu_button" type="id"/>
    <item name="settings_menu_button" type="id"/>
    <item name="search_on_page_menu_button" type="id"/>
    <item name="download_youtube_video_menu_button" type="id"/>
    <item name="tracker_counter" type="id"/>
    <item name="quit_menu_button" type="id"/>
    <item name="search_web_view" type="id"/>
    <item name="request_desktop_site" type="id" />
    <item name="control_center" type="id"/>
    <item name="cc_icon" type="id"/>
    <!-- Zxing barcode scanner ids -->
    <item name="restart_preview" type="id" />
    <item name="decode_succeeded" type="id" />
    <item name="decode_failed" type="id" />
    <item name="decode" type="id" />
    <item name="quit" type="id" />
    <item name="msg_kill_caller_thread" type="id" />
    <item name="msg_execute_javascript_function" type="id" />
    <item name="msg_extension_caller_quit" type="id" />
    <item name="msg_extension_details_from_url" type="id" />
    <item name="executeJavascript" type="id" />
    <item name="callNative" type="id" />
    <item name="msg_extension_ready" type="id" />
    <item name="browser_view" type="id" />
    <item name="enableable_view" type="id" />
    <item name="go_to_favorites_button" type="id" />
    <item name="react_debug" type="id" />
    <item name="code_scanner" type="id" />
    <item name="reader_mode" type="id" />
    <item name="overflow_menu_list" type="id" />
    <item name="incognito_tab_id" type="id" />
    <item name="regular_tab_id" type="id" />
    <item name="trash_topsites_id" type="id" />
    <item name="background_manager_listener_key" type="id" />
    <item name="background_manager_mode_key" type="id" />
    <item name="favorites_view_parent" type="id" />
    <item name="tabs_manager_button" type="id" />
    <item name="tabs_menu_button" type="id" />
</resources>
