<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Stub ids for missing UI elements in Lumen -->
    <item name="menu_overview" type="id" />
    <item name="open_tabs_count" type="id" />

    <!-- Stub ids for preferences -->
    <item name="feedback" type="id" />
    <item name="ad_block" type="id" />
    <item name="tips_and_tricks" type="id" />
    <item name="report_site" type="id" />

    <!-- Stub ids for the overflow menu -->
    <item name="action_share" type="id" />

    <item name="cliqz_onboarding" type="layout" />
</resources>