<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/tabs_overview_background_color">

    <com.cliqz.deckview.TabsDeckView
        android:id="@+id/tabs_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:remainderSize="50dp"
        app:deckPadding="10dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_tab_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_action_add_white"
        app:backgroundTint="@color/tabs_overview_floating_button_color" />
</FrameLayout>
