...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:paddingTop="10dp">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/action_forward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="?attr/actionBarItemBackground"
        app:tint="@color/overflow_menu_header_tint"
...
            android:tint="@color/overflow_menu_header_tint"
            android:enabled="false"
            tools:background="@drawable/ic_favorite" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/action_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="?attr/actionBarItemBackground"
        app:tint="@color/overflow_menu_header_tint"
...
